ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - springboot.gautham.com
    secretName: spring-tls
  rules:
  - host: springboot.gautham.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-hello-loadbalancer
          servicePort: 8080
